fixed error when logging in.  fixed dropdown on time picker on rigister page

--- a/Alllive/Views/User/Register.cshtml
+++ b/Alllive/Views/User/Register.cshtml
@@ -201,10 +201,10 @@
                                 </label>
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.MonStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.MonStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.MonEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.MonEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                         </div>
                         <div class="row">
@@ -215,10 +215,10 @@
                                 </label>
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.TueStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.TueStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.TueEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.TueEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                         </div>
                         <div class="row">
@@ -229,10 +229,10 @@
                                 </label>
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.WedStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.WedStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.WedEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions, new { @class = "form-control", @style = "width:106px" })
+                                @Html.DropDownListFor(a => a.WedEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions, new { @class="form-control timep" })
                             </div>
                         </div>
                         <div class="row">
@@ -243,10 +243,10 @@
                                 </label>
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.ThuStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.ThuStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.ThuEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.ThuEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                         </div>
                         <div class="row">
@@ -257,10 +257,10 @@
                                 </label>
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.FriStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.FriStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.FriEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.FriEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                         </div>
                         <div class="row">
@@ -271,10 +271,10 @@
                                 </label>
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.SatStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.SatStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.SatEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.SatEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                         </div>
                         <div class="row">
@@ -285,10 +285,10 @@
                                 </label>
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.SunStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.SunStart, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                             <div class="col-md-3">
-                                @Html.DropDownListFor(a => a.SunEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control", @style="width:106px" })
+                                @Html.DropDownListFor(a => a.SunEnd, (IEnumerable<SelectListItem>)ViewBag.minuteOptions,new {@class="form-control timep"   })
                             </div>
                         </div>
 
