fixed view tutor page and fixed schedule meeting page

--- a/Alllive/Views/Navigation/ScheduleMeeting.cshtml
+++ b/Alllive/Views/Navigation/ScheduleMeeting.cshtml
@@ -15,7 +15,7 @@
         </div>
 
         <div class="col-sm-2">
-            @Html.TextBoxFor(a => a.SessionName, new { @class = "form-control", @style = "display:inline-block; border-radius: 3rem; " })
+            @Html.TextBoxFor(a => a.SessionName, new { @class = "form-control", @style = "display:inline-block;" })
         </div>
     </div>
     <div class="row">
@@ -23,7 +23,7 @@
             @Html.Label("Description")
         </div>
         <div class="col-sm-2">
-            @Html.TextAreaFor(a => a.Description, new { @style = "border-radius: 3rem;" })
+            @Html.TextAreaFor(a => a.Description)
         </div>
 
     </div>
@@ -32,7 +32,7 @@
             @Html.Label("Date")
         </div>
         <div class="col-sm-2">
-            @Html.TextBoxFor(a => a.Date, new { @style = "border-radius:3rem;", @ID = "datepicker", @class = "form-control" })
+            @Html.TextBoxFor(a => a.Date, new { @ID = "datepicker", @class = "form-control" })
         </div>
     </div>
     <div class="row">
@@ -41,7 +41,8 @@
         </div>
         <div class="col-sm-2">
             @*@Html.TextBoxFor(a => a.DateTimeScheduledIn, new { @class = "form-control", @style = "display:inline-block" })*@
-            @Html.TextBoxFor(a => a.StartTime, new { @style = "border-radius:3rem;", @class = "form-control" })
+            @Html.DropDownListFor(a => a.StartTime, (IEnumerable<SelectListItem>)ViewBag.minuteOptions, new { @class = "form-control timep" })
+
         </div>
         @*<div class='input-group date' id='datepicker'>
             <input type='text' class="form-control" />
@@ -56,7 +57,8 @@
         </div>
         <div class="col-sm-2">
             @*@Html.TextBoxFor(a => a.DateTi}meScheduledOut, new { @class = "form-control", @style = "display:inline-block" })*@
-            @Html.TextBoxFor(a => a.EndTime, new { @style = "border-radius:3rem;", @class = "form-control" })
+            @Html.DropDownListFor(a => a.EndTime, (IEnumerable<SelectListItem>)ViewBag.minuteOptions, new { @class = "form-control timep" })
+
 
         </div>
     </div>
@@ -107,7 +109,7 @@
                    new SelectListItem{ Text="(GMT +12:45) Chatham Islands", Value = "+12:75" },
                    new SelectListItem{ Text="(GMT +13:00) Apia, Nukualofa", Value = "+13:00" },
                    new SelectListItem{ Text="(GMT +14:00) Line Islands, Tokelau", Value = "+14:00" }
-                }, new { @style = "border-radius:3rem;width: 90%", @class = "form-control" })
+                }, new { @style = "width: 90%", @class = "form-control" })
         </div>
     </div>
 
@@ -131,7 +133,7 @@
                     new SelectListItem{ Text="Daily", Value = "1" },
                     new SelectListItem{ Text="Weekly", Value = "2" },
                     new SelectListItem{ Text="Monthly", Value = "3" },
-                 }, new { @ID = "myList", @style = "border-radius:3rem;width: 60%", @class = "form-control" })
+                 }, new { @ID = "myList", @style = "width: 60%", @class = "form-control" })
             </div>
         </div>
 
@@ -142,7 +144,7 @@
                     Repeat every
                 </div>
                 <div class="col-sm-4">
-                    @Html.DropDownListFor(a => a.RepeatDaily, new List<SelectListItem> { }, new { @style = "border-radius:3rem;width: 50%", @class = "form-control" })
+                    @Html.DropDownListFor(a => a.RepeatDaily, new List<SelectListItem> { }, new { @style = "width: 50%", @class = "form-control" })
                     <label ID="Frequency">Day</label>
                 </div>
             </div>
@@ -213,14 +215,14 @@
                         new SelectListItem{ Text="29", Value = "29" },
                         new SelectListItem{ Text="30", Value = "30" },
                         new SelectListItem{ Text="31", Value = "31" }
-                    }, new { @ID = "MonthlyFrequency", @style = "border-radius:3rem;display:inline; width:40%", @class = "form-control" })
+                    }, new { @ID = "MonthlyFrequency", @style = "display:inline; width:40%", @class = "form-control" })
                     @Html.Label("Of the Month")
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-                    @Html.RadioButtonFor(a => a.RepeatMonthRadio1, false, new { @ID = "rbtn2", })
+                    @Html.RadioButtonFor(a => a.RepeatMonthRadio1, false, new { @ID = "rbtn2"})
                     @Html.DropDownListFor(a => a.Radio2List1, new List<SelectListItem>
                     {
                         new SelectListItem{ Text="Select a time of Month", Value = "0" },
@@ -229,7 +231,7 @@
                         new SelectListItem{ Text="Third", Value = "3" },
                         new SelectListItem{ Text="Fourth", Value="4" },
                         new SelectListItem{ Text="Last",Value="5" }
-                    }, new { @style = "border-radius:3rem;display:inline", @class = "form-control" })
+                    }, new { @style = "display:inline; width:40%;", @class = "form-control" })
                     @Html.DropDownListFor(a => a.Radio2List2, new List<SelectListItem>
                     {
                         new SelectListItem{ Text="Select a Day", Value = "0" },
@@ -240,7 +242,7 @@
                         new SelectListItem{ Text="Thursday", Value = "5" },
                         new SelectListItem{ Text="Friday", Value = "6" },
                         new SelectListItem{ Text="Saturday", Value="7"}
-                    },new { @style= "border-radius:3rem;display:inline", @class="form-control" })
+                    },new { @style= "display:inline; width: 40%;", @class="form-control" })
                     @Html.Label("Of the Month")
                 </div>
             </div>
@@ -254,7 +256,7 @@
                 <div>
                     @Html.RadioButtonFor(a=>a.RepeatMonthRadio2,false, new { @ID = "rbtn3" , @class="form-check-input" })
                     @Html.Label("By", new { @class = "form-check-label" })
-                    @Html.TextBoxFor(a=>a.EndDateBy, new { @placeholder = "MM/DD/YYYY", @style= "border-radius:3rem;display:inline", @class = "form-control" })
+                    @Html.TextBoxFor(a=>a.EndDateBy, new { @placeholder = "MM/DD/YYYY", @class = "form-control" })
                     <br />
                     @Html.RadioButtonFor(a=>a.RepeatMonthRadio2,false, new { @ID = "rbtn4" , @class= "form-check-input" })
                     @Html.Label("After", new { @class = "form-check-label" })
@@ -268,7 +270,7 @@
                         new SelectListItem{ Text="5", Value = "5" },
                         new SelectListItem{ Text="6", Value = "6" },
                         new SelectListItem{Text="7", Value="7"}
-                    }, new {@style="border-radius:3rem;display:inline;width: 20%" , @class="form-control"})
+                    }, new {@style="display:inline;width: 20%" , @class="form-control"})
 
                     @Html.Label("Occurances of meeting").
                 </div>
@@ -299,6 +301,7 @@
 <!-- This handles Reoccurring opttions -->
 <script>
     $(document).ready(function () {
+        $("#EndDateBy").datepicker();
         $("#Recurr").click(function () {
             if ($(this).is(':checked')) {
                 $("#RecurrOptions").show();
