--- a/Alllive/Views/Search/ViewTutor.cshtml
+++ b/Alllive/Views/Search/ViewTutor.cshtml
@@ -1,166 +1,185 @@
 ﻿@model Alllive.Models.TutorViewModel
 @{
-    ViewBag.Title = "ViewTutor";
+    ViewBag.Title = "";
 }
 
-<h2>ViewTutor</h2>
+    <h2>
+        @Model.User.FirstName @Model.User.LastName
+    </h2>
 
 
-
+    <div class="pull-right">
+        <p>
+        <a class="btn btn-primary" href="@Url.Action("Request","Schedule",new {tutorProfileID=Model.TutorProfile.TutorProfileID })">Schedule</a>
+        </p>
+        
+        <p>
+        <a class="btn btn-primary" href="@Url.Action("Compose","Message",new {recieverID=Model.User.UserID,tutorProfileID=Model.TutorProfile.TutorProfileID })">Message Tutor</a>
+         </p>
+    </div>
 
 <div class="container">
-    
-    @if (Model.TutorProfile.Photo != null)
+
+    @if (Model.TutorProfile.ImageID.HasValue)
     {
-        <img width="70" height="70" src="@Model.TutorProfile.Photo" />
+        <img width="70" height="70" src="@Url.Action("Index","Images",new {imageID=Model.TutorProfile.ImageID.Value })" />
     }
     else
     {
         <img width="70" height="70" src="~/Images/silhoutte.png" />
     }
     <div class="list-group-item-text">
-        <h4>@Model.User.FirstName @Model.User.LastName</h4>
         <h5>@Model.TutorProfile.HeadLine</h5>
-        <hr/>
+        <hr />
         <p>@Model.TutorProfile.Bio</p>
-    
+
     </div>
-    </div>
-    <div class="container">
+</div>
         @if (Model.TutorProfile != null)
         {
-            <div class=" container">
+           
                 <div class="row">
                     <div class="col-md-1">
                         <label>Rate</label>
                     </div>
                     <div class="col-md-1">
-                        @Model.TutorProfile.Rate
+                        $@Model.TutorProfile.Rate /Hr
                     </div>
+                </div>
+          
+            <div class="row">
+                <div class="col-md-1">
+                    Subjects
+                </div>
+                <div class="col-md-1">
+                    @if (@Model.TutorProfile.Reading)
+                    {
+                        <h6>Reading</h6>
+                    }
+                    @if (@Model.TutorProfile.Math)
+                    {
+                        <h6>Maths</h6>
+                    }
+                    @if (@Model.TutorProfile.Science)
+                    {
+                        <h6>Science</h6>
+                    }
                 </div>
             </div>
-            
             <hr />
-            <p>
-                @Model.TutorProfile.Bio;
-            </p>
-            if (Model.TutorProfile.Bio != null)
-            {
-                <hr />
-            }
-
-            <div class="container">
+            
+              
                 <div class="row">
-                    <div class="col-md-1">
-                        <h6>Availability</h6>
+                    <div class="col-md-2">
+                        <label>Availability</label>
                     </div>
-                    <div class="col-md-1">
-                        <h6>Start Time</h6>
+                    <div class="col-md-2">
+                        <label>Start Time</label>
                     </div>
-                    <div class="col-md-1">
-                        <h6>End Time</h6>
+                    <div class="col-md-2">
+                        <label>End Time</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-1">
-                        <p>
-                            <h5>Monday: </h5>
-                        </p>
+                    <div class="col-md-2">
+                       
+                            <span>Monday: </span>
+                        
                     </div>
                     @if (Model.TutorProfile.Monday)
                     {
 
 
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.MondayStart
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.MondayEnd
 
                         </div>
                     }
                 </div>
                 <div class="row">
-                    <div class="col-md-1">
-                        <p>
-                            <h5>Tuesday: </h5>
-                        </p>
+                    <div class="col-md-2">
+                       
+                            <span>Tuesday: </span>
+                      
                     </div>
                     @if (Model.TutorProfile.Tuesday)
                     {
 
 
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.TuesdayStart
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.TuesdayEnd
 
                         </div>
                     }
                 </div>
                 <div class="row">
-                    <div class="col-md-1">
-                        <p>
-                            <h5>Wednesday: </h5>
-                        </p>
+                    <div class="col-md-2">
+                       
+                            <span>Wednesday: </span>
+                        
                     </div>
                     @if (Model.TutorProfile.Wednesday)
                     {
 
 
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.WednesdayStart
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.WednesdayEnd
 
                         </div>
                     }
                 </div>
                 <div class="row">
-                    <div class="col-md-1">
-                        <p>
-                            <h5>Thursday: </h5>
-                        </p>
+                    <div class="col-md-2">
+                        
+                            <span>Thursday: </span>
+                        
                     </div>
                     @if (Model.TutorProfile.Thursday)
                     {
 
 
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.ThursdayStart
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.ThursdayEnd
 
                         </div>
                     }
                 </div>
                 <div class="row">
-                    <div class="col-md-1">
-                        <p>
-                            <h5>Friday: </h5>
-                        </p>
+                    <div class="col-md-2">
+                       
+                            <span>Friday: </span>
+                        
                     </div>
                     @if (Model.TutorProfile.Friday)
                     {
 
 
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.FridayStart
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.FridayEnd
 
                         </div>
                     }
                 </div>
                 <div class="row">
-                    <div class="col-md-1">
-                        <p>
-                            <h5>Saturday: </h5>
-                        </p>
+                    <div class="col-md-2">
+                       
+                            <span>Saturday: </span>
+                        
                     </div>
                     @if (Model.TutorProfile.Saturday)
                     {
@@ -169,55 +188,32 @@
                         <div class="col-md13">
                             @Model.TutorProfile.SaturdayStart
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.SaturdayEnd
 
                         </div>
                     }
                 </div>
                 <div class="row">
-                    <div class="col-md-1">
-                        <p>
-                            <h5>Sunday: </h5>
-                        </p>
+                    <div class="col-md-2">
+                       
+                            <span>Sunday: </span>
+                        
                     </div>
                     @if (Model.TutorProfile.Sunday)
                     {
 
 
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.SundayStart
                         </div>
-                        <div class="col-md-1">
+                        <div class="col-md-2">
                             @Model.TutorProfile.SundayEnd
 
                         </div>
                     }
                 </div>
-                <div class="row">
-                    <div class="col-md-1">
-                        Subjects
-                    </div>
-                    <div class="col-md-1">
-                        @if (@Model.TutorProfile.Reading)
-                        {
-                            <h6>Reading</h6>
-                        }
-                        @if (@Model.TutorProfile.Math)
-                        {
-                            <h6>Maths</h6>
-                        }
-                        @if (@Model.TutorProfile.Science)
-                        {
-                            <h6>Science</h6>
-                        }
-                    </div>
-                </div>
-            </div>
+                
+           
             @*<a class="btn btn-default" href="@Url.Action("TutorRegistration",new { tutorProfileId = Model.TutorProfile.TutorProfileID })">Edit</a>*@
         }
-        else
-        {
-            <a class="btn btn-primary" href="@Url.Action("TutorRegistration")">Add a Tutor Profile</a>
-        }
-    </div>
