--- a/Alllive/Views/User/ViewProfile.cshtml
+++ b/Alllive/Views/User/ViewProfile.cshtml
@@ -29,10 +29,10 @@
             <img src="~/Images/silhoutte.png" />
         </p>
         <p>
-            @Model.TutorProfile.HeadLine;
+            @Model.TutorProfile.HeadLine
         </p>
         <p>
-            @Model.TutorProfile.Bio;
+            @Model.TutorProfile.Bio
         </p>
 
         <a class="btn btn-default" href="@Url.Action("TutorRegistration",new { tutorProfileId = Model.TutorProfile.TutorProfileID })">Edit</a>
